# pystoretest

./: .env.alpha  .env.sample  .gitignore  Makefile  README.md  client.py  coingecko-notes.md  coingecko.py  conftest.py  find_error.py  flake.lock.license  flake.nix  objfactory.py  pbfact.py  populate_shop.py  pyproject.toml  pythonenv.nix  setup_demo.py  shell.nix  test_benchmark.py  test_connections.py  test_currencies.py  test_events.py  test_events_cart.py  test_guests.py  test_orders.py  test_registration.py  testcats.md
.github/workflows/: test.yml
massmarket_client/: __init__.py  blockchain_manager.py  client.py  connection_manager.py  legacy_client.py  patch_handler.py  patch_manager.py  persistence.py  shop_operations.py  subscription_manager.py  utils.py
misc-utils/: debug.py  fix_store_setup.py  setup_store.py  subscribe.py
tests/: __init__.py  conftest.py  objfactory.py  test_benchmark.py  test_compatibility.py  test_connections.py  test_currencies.py  test_events.py  test_guests.py  test_orders.py  test_patch_handler_extensions.py  test_patch_handler_integration.py  test_persistence.py  test_registration.py
